2010-09-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* Renamed pf/cgi-bin/pdp.cgi to pf/lib/pf/WebAPI.pm, modified
	pf/addons/802.1X/rlm_perl_packetfence_soap.pl, 
	pf/conf/templates/httpd.conf.apache22, pf/lib/pf/WebAPI.pm,
	pf/lib/pf/radius.pm, pf/lib/pf/vlan.pm, pf/t/critic.t, pf/t/pod.t
	pf/t/podCoverage.t, pf/t/stress-test/soap-calls-radius_authorize
	pf/t/stress-test/soap-calls-snort: Ported cgi-bin/pdp.cgi SOAP CGI 
	handler to full blown mod_perl SOAP-Lite hosted module. Fixes #1010; 
	Note: URI for Web Services changed from /cgi-bin/pdp.cgi to /webapi
	http://www.packetfence.org/bugs/view.php?id=1010

2010-09-23	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/node.pm: Fixed a small but important merge mistake.

2010-09-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/NEWS, pf/conf/pf-release, 
	pf/docs/PacketFence_Administration_Guide.odt, 
	pf/docs/PacketFence_Developers_Guide.odt, 
	pf/docs/PacketFence_Installation_Guide.odt, pf/packetfence.spec, 
	pf/t/pfcmd.t: New 1.9.1 release!

	* pf/t/smoke.t: Added new smoke testsuite which is used by our building
	process. A suite of tests quick to run, with no side-effects and that 
	should always pass.

2010-09-21	Regis Balzard <rbalzard@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt:
	Updated documentation for FreeRadius 1.x and added some for 2.x. 
	Fixes bug #1036;
	http://www.packetfence.org/bugs/view.php?id=1036

	* pf/docs/PacketFence_Administration_Guide.odt:
	Updated (for clarification purpose) documentation for Cisco stacked 
	and 4500 Series switches. Fixes bug #1037;
	http://www.packetfence.org/bugs/view.php?id=1037

2010-09-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/pdp.cgi, pf/cgi-bin/redir.cgi, pf/cgi-bin/register.cgi, 
	pf/cgi-bin/release.cgi, pf/html/admin/administration/adduser.php, 
	pf/html/admin/administration/index.php, 
	pf/html/admin/administration/services.php, 
	pf/html/admin/administration/ui_options.php, 
	pf/html/admin/administration/version.php, 