@@ -1,0 +1,17 @@
+#!/usr/bin/perl
+
+use lib "/usr/local/pf/lib";
+
+use strict;
+use warnings;
+
+use Log::Log4perl;
+
+use pf::config;
+use pf::locationlog;
+use pf::node;
+use pf::SNMP;
+use pf::SwitchFactory;
+use pf::util;
+
+1;
